# SofaPythonToolbox

./: CMakeLists.txt  SofaPythonToolboxConfig.cmake.in
.github/workflows/: ci.yml
python3/stlib3/scene/: contactheader.py
python3/tests/: TestExampleScenes.py
src/SofaPythonToolbox/: initPlugin.cpp  initPlugin.h
